--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "predeploy": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
